name:                yesodSubsiteExample
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/charliebevis/yesodSubsiteExample#readme
license:             BSD3
license-file:        LICENSE
author:              Charlie Bevis
maintainer:          charliebevis@gmail.com
copyright:           2017 Charlie Bevis
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     HelloSub
                     , HelloSub.Data
  build-depends:       base >= 4.7 && < 5
                     , yesod
  default-language:    Haskell2010

executable yesodSubsiteExample-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , yesodSubsiteExample
                     , yesod
  default-language:    Haskell2010

test-suite yesodSubsiteExample-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , yesodSubsiteExample
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/charliebevis/yesodSubsiteExample
